--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
+pyzmq==26.4.0
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
